Fix contact circles not centered on page width

--- a/src/components/ContactProfile/ContactProfile.module.css
+++ b/src/components/ContactProfile/ContactProfile.module.css
@@ -1,6 +1,5 @@
 .contact-title {
-  width: 18%;
-  min-width: 120px;
+  width: 120px;
   margin-bottom: 48px;
 }
 
